--- a/mysite_nginx.conf
+++ b/mysite_nginx.conf
@@ -11,7 +11,7 @@ server {
     # the port your site will be served on
     listen      8000;
     # the domain name it will serve for
-    server_name www.bricksfx.cn 192.168.1.14; # substitute your machine's IP address or FQDN
+    server_name 192.168.1.14; # substitute your machine's IP address or FQDN
     charset     utf-8;
 
     # max upload size
